@@ -1,3 +1,9 @@
+Development version
+===================
+- Added Tipfy.get_url_adapter(), that returns a bound URL map, to make it
+  easier to override the bound server_name or subdomain.
+
+
 Version 0.6 - July 25, 2010
 ===========================
 - Handler definitions in URL rules can now also be a RequestHandler class,
